--- a/.prettierrc
+++ b/.prettierrc
@@ -6,7 +6,7 @@
   "printWidth": 100,
   "bracketSpacing": true,
   "arrowParens": "avoid",
-  "endOfLine": "lf",
+  "endOfLine": "crlf",
   "jsxSingleQuote": false,
   "jsxBracketSameLine": false
 }
